[metadata]
name = syseleven.cloudutils
summary = Utils for the cloud
description-file = README.md
author = Stefan Andres
author-email = s.andres@syseleven.de
home-page = www.syseleven.de
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages = syseleven
namespace_packages = syseleven

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    scloud = syseleven.cloudutils.scloud.shell:main
    show_heat_floating_ips = syseleven.cloudutils.show_heat_floating_ips.shell:main
